--- a/lang_csharp/_gen/type_Structure.tmpl
+++ b/lang_csharp/_gen/type_Structure.tmpl
@@ -1,6 +1,7 @@
 {{- $bag := . -}}
+{{- $ident := $bag.TypeIdentGen -}}
 
-/*TStruc*/public class {{ $bag.TypeIdentGen }} {
+/*TStruc*/public class {{ $ident }} {
     {{ range $bag.Type.Properties -}}
     {{ .DoDocComments $bag.Main -}}
     public {{ $bag.Main.DoTypeOptional .Type ($bag.Main.If .HasConstVal false .Optional) }} {{ .NameUp }};
