[autopush] «Today is what happened to yesterday.»

--- a/lang_csharp/_gen/decls_aliases.tmpl
+++ b/lang_csharp/_gen/decls_aliases.tmpl
@@ -1,1 +1,8 @@
-// yo
+{{- $main := . }}
+
+{{- range .Decls }}
+{{- $alias := . }}
+
+// using {{ $alias.Name }} = {{ $main.DoType $alias.Type }};
+
+{{- end }}
