--- a/lang_csharp/_gen/type_Reference.tmpl
+++ b/lang_csharp/_gen/type_Reference.tmpl
@@ -1,6 +1,9 @@
 {{- $bag := . -}}
-{{- if and ($bag.Main.IsEnumTypeName (printf "%s" $bag.Type)) ($bag.Main.IsTypeKindOf $bag.Type "string") -}}
+{{- $tyStr := printf "%s" $bag.Type -}}
+{{- if and ($bag.Main.IsEnumTypeName $tyStr) ($bag.Main.IsTypeKindOf $bag.Type "string") -}}
 /*{{- $bag.Type -}}*/string
+{{- else if ($bag.Main.IsAliasTypeName $tyStr) -}}
+{{- $bag.Main.DoTypeAlias $bag.Type -}}
 {{- else -}}
 {{- $bag.Type -}}
 {{- end -}}
