[autopush] «It was Penguin lust... at its ugliest.»

--- a/lang_csharp/_gen/decls_aliases.tmpl
+++ b/lang_csharp/_gen/decls_aliases.tmpl
@@ -1,6 +1,6 @@
 {{- $main := . }}
 
-{{- range .Decls }}
+{{- range .Decls.TypeAliases }}
 {{- $alias := . }}
 
 // using {{ $alias.Name }} = {{ $main.DoType $alias.Type }};
