--- a/lang_csharp/_gen/decls_enumerations.tmpl
+++ b/lang_csharp/_gen/decls_enumerations.tmpl
@@ -1,6 +1,6 @@
 {{- $main := . -}}
 
-{{- range .Decls -}}
+{{- range .Decls.Enumerations -}}
 {{- $enum := . -}}
 
 {{- if ($main.IsTypeKindOf $enum.Type "string") }}
