--- a/lang_csharp/_gen/file_pkg.tmpl
+++ b/lang_csharp/_gen/file_pkg.tmpl
@@ -3,5 +3,6 @@
         <TargetFramework>net7.0</TargetFramework>
         <AssemblyTitle>{{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}</AssemblyTitle>
         <AssemblyDescription>{{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}</AssemblyDescription>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 </Project>
