revisit polyglot-lsp (wip)

--- a/lang_go/_gen/decls.tmpl
+++ b/lang_go/_gen/decls.tmpl
@@ -1,11 +1,11 @@
 import (
-    "bufio"
-    "bytes"
+	"bufio"
+	"bytes"
 	"encoding/json"
-    "fmt"
-    "net/url"
-    "os"
-    "strconv"
+	"fmt"
+	"net/url"
+	"os"
+	"strconv"
 )
 
 {{ $main := . -}}
@@ -22,8 +22,8 @@ type URI = String
 // If you do need the `error`, just use the original `url.Parse` directly.
 func (it *URI) URL() (ret *url.URL) {
 	if it.IsNone() { return nil }
-    ret, _ = url.Parse(string(*it))
-    return
+	ret, _ = url.Parse(string(*it))
+	return
 }
 
 type String string
@@ -33,8 +33,8 @@ func (it *String) IsNone() bool { return it == nil || *it == "" }
 
 // IfNone returns `ifNone` if `it` is `nil` or the `string` zero value; otherwise, `it.Value()` is returned.
 func (it *String) IfNone(ifNone string) string {
-    if it.IsNone() { return ifNone }
-    return string(*it)
+	if it.IsNone() { return ifNone }
+	return string(*it)
 }
 
 // Value returns the `string` zero value if `it` is `nil`; otherwise `*it` is returned.
@@ -42,8 +42,8 @@ func (it *String) Value() string { return it.IfNil("") }
 
 // IfNil returns `ifNil` if `it` is `nil`; otherwise, `it.Value()` is returned.
 func (it *String) IfNil(ifNil string) string {
-    if it == nil { return ifNil }
-    return string(*it)
+	if it == nil { return ifNil }
+	return string(*it)
 }
 
 type Integer int
@@ -53,8 +53,8 @@ func (it *Integer) IsNone() bool { return it == nil || *it == 0 }
 
 // IfNone returns `ifNone` if `it` is `nil` or the `int` zero value; otherwise, `it.Value()` is returned.
 func (it *Integer) IfNone(ifNone int) int {
-    if it.IsNone() { return ifNone }
-    return int(*it)
+	if it.IsNone() { return ifNone }
+	return int(*it)
 }
 
 // Value returns the `int` zero value if `it` is `nil`; otherwise `*it` is returned.
@@ -62,8 +62,8 @@ func (it *Integer) Value() int { return it.IfNil(0) }
 
 // IfNil returns `ifNil` if `it` is `nil`; otherwise, `it.Value()` is returned.
 func (it *Integer) IfNil(ifNil int) int {
-    if it == nil { return ifNil }
-    return int(*it)
+	if it == nil { return ifNil }
+	return int(*it)
 }
 
 type Uinteger uint
@@ -73,8 +73,8 @@ func (it *Uinteger) IsNone() bool { return it == nil || *it == 0 }
 
 // IfNone returns `ifNone` if `it` is `nil` or the `uint` zero value; otherwise, `it.Value()` is returned.
 func (it *Uinteger) IfNone(ifNone uint) uint {
-    if it.IsNone() { return ifNone }
-    return uint(*it)
+	if it.IsNone() { return ifNone }
+	return uint(*it)
 }
 
 // Value returns the `uint` zero value if `it` is `nil`; otherwise `*it` is returned.
@@ -82,8 +82,8 @@ func (it *Uinteger) Value() uint { return it.IfNil(0) }
 
 // IfNil returns `ifNil` if `it` is `nil`; otherwise, `it.Value()` is returned.
 func (it *Uinteger) IfNil(ifNil uint) uint {
-    if it == nil { return ifNil }
-    return uint(*it)
+	if it == nil { return ifNil }
+	return uint(*it)
 }
 
 type Decimal float64
@@ -93,8 +93,8 @@ func (it *Decimal) IsNone() bool { return it == nil || *it == 0.0 /*|| *it == ma
 
 // IfNone returns `ifNone` if `it` is `nil` or the `float64` zero value; otherwise, `it.Value()` is returned.
 func (it *Decimal) IfNone(ifNone float64) float64 {
-    if it.IsNone() { return ifNone }
-    return float64(*it)
+	if it.IsNone() { return ifNone }
+	return float64(*it)
 }
 
 // Value returns the `float64` zero value if `it` is `nil`; otherwise `*it` is returned.
@@ -102,8 +102,8 @@ func (it *Decimal) Value() float64 { return it.IfNil(0.0) }
 
 // IfNil returns `ifNil` if `it` is `nil`; otherwise, `it.Value()` is returned.
 func (it *Decimal) IfNil(ifNil float64) float64 {
-    if it == nil { return ifNil }
-    return float64(*it)
+	if it == nil { return ifNil }
+	return float64(*it)
 }
 
 type Boolean bool
@@ -113,8 +113,8 @@ func (it *Boolean) IsNone() bool { return it == nil || !(bool)(*it) }
 
 // IfNone returns `ifNone` if `it` is `nil` or the `bool` zero value; otherwise, `it.Value()` is returned.
 func (it *Boolean) IfNone(ifNone bool) bool {
-    if it.IsNone() { return ifNone }
-    return bool(*it)
+	if it.IsNone() { return ifNone }
+	return bool(*it)
 }
 
 // Value returns the `bool` zero value if `it` is `nil`; otherwise `*it` is returned.
@@ -122,50 +122,64 @@ func (it *Boolean) Value() bool { return it.IfNil(false) }
 
 // IfNil returns `ifNil` if `it` is `nil`; otherwise, `it.Value()` is returned.
 func (it *Boolean) IfNil(ifNil bool) bool {
-    if it == nil { return ifNil }
-    return bool(*it)
+	if it == nil { return ifNil }
+	return bool(*it)
 }
 
 type Server struct {
-    stdout *bufio.Writer
-    waiters map[string]func()
+	stdout *bufio.Writer
+	waiters map[string]func()
+
+	{{ range $main.Decls.Extras -}}
+	{{- $msg := . -}}
+	{{- if ($msg.IsClientToServer) -}}
+	{{- range $msg.DocLines }}
+	// {{ . }}
+	{{- end }}
+	On_{{ $msg.MethodNameSafe }} func()
+	{{ end -}}
+	{{- end -}}
+
 }
 
 type jsonRpcError struct {
-    Code int `json:"code"`
-    Message string `json:"message"`
+	Code int `json:"code"`
+	Message string `json:"message"`
 }
 
 func (it *Server) handleIncoming(jsonRpcMsg []byte) *jsonRpcError {
-    raw := map[string]any{}
-    if err := json.Unmarshal(jsonRpcMsg, &raw); err != nil {
-        return &jsonRpcError{ Code: -32700, Message: err.Error() }
-    }
-    msg_id, msg_method, msg_err_code :=fmt.Sprintf("%v", raw["id"]), raw["method"], raw["code"]
+	raw := map[string]any{}
+	if err := json.Unmarshal(jsonRpcMsg, &raw); err != nil {
+		return &jsonRpcError{ Code: -32700, Message: err.Error() }
+	}
+	msg_id, msg_method, msg_err_code :=fmt.Sprintf("%v", raw["id"]), raw["method"], raw["code"]
 
-    if msg_err_code != nil { // received an error Response
-        println(string(jsonRpcMsg)) // goes to stderr
-        return nil
-    }
+	if msg_err_code != nil { // received an error Response
+		println(string(jsonRpcMsg)) // goes to stderr
+		return nil
+	}
 
-    if msg_method != nil { // msg is an incoming Request or Notification
+	if msg_method != nil { // msg is an incoming Request or Notification
+		{{- range $main.Decls.Extras -}}
+		{{- $msg := . }}
+		/* {{ $msg.Method }} */
+		{{- end -}}
+	} else { // msg is an incoming Response
+		handler := it.waiters[msg_id]
+		delete(it.waiters, msg_id)
+		go handler()
+	}
 
-    } else { // msg is an incoming Response
-        handler := it.waiters[msg_id]
-        delete(it.waiters, msg_id)
-        go handler()
-    }
-
-    return nil
+	return nil
 }
 
 func (it *Server) Serve() error {
-    const buf_cap = 1024 * 1024
+	const buf_cap = 1024 * 1024
 
 	it.stdout = bufio.NewWriterSize(os.Stdout, buf_cap)
-    it.waiters =  map[string]func(){}
+	it.waiters =  map[string]func(){}
 
-    stdin := bufio.NewScanner(os.Stdin)
+	stdin := bufio.NewScanner(os.Stdin)
 	stdin.Buffer(make([]byte, buf_cap), buf_cap)
 	stdin.Split(func(data []byte, ateof bool) (advance int, token []byte, err error) {
 		if i_cl1 := bytes.Index(data, []byte("Content-Length: ")); i_cl1 >= 0 {
@@ -184,15 +198,15 @@ func (it *Server) Serve() error {
 		return
 	})
 
-    for stdin.Scan() {
-        err := it.handleIncoming(stdin.Bytes())
-        if err != nil {
-            err_json,_ := json.Marshal(err)
-            _, _ = it.stdout.WriteString("Content-Length: ")
-            _, _ = it.stdout.WriteString(strconv.Itoa(len(err_json)))
-            _, _ = it.stdout.WriteString("\r\n\r\n")
-            _, _ = it.stdout.Write(err_json)
-        }
-    }
-    return stdin.Err()
+	for stdin.Scan() {
+		err := it.handleIncoming(stdin.Bytes())
+		if err != nil {
+			err_json,_ := json.Marshal(err)
+			_, _ = it.stdout.WriteString("Content-Length: ")
+			_, _ = it.stdout.WriteString(strconv.Itoa(len(err_json)))
+			_, _ = it.stdout.WriteString("\r\n\r\n")
+			_, _ = it.stdout.Write(err_json)
+		}
+	}
+	return stdin.Err()
 }
