--- a/lang_go/_gen/decls.tmpl
+++ b/lang_go/_gen/decls.tmpl
@@ -1,12 +1,6 @@
 
 import (
-	"bufio"
-	"bytes"
-	"encoding/json"
-	"fmt"
 	"net/url"
-	"os"
-	"strconv"
 )
 
 {{ $main := . -}}
@@ -18,6 +12,7 @@ import (
 
 type DocumentURI = URI
 type URI = String
+type Void = struct{}
 
 // URL is a convenience `url.Parse(string(it))` call that returns `nil` on error.
 // If you do need the `error`, just use the original `url.Parse` directly.
@@ -127,101 +122,7 @@ func (it *Boolean) IfNil(ifNil bool) bool {
 	return bool(*it)
 }
 
-type Server struct {
-	stdout *bufio.Writer
-	waiters map[string]func()
-
-	{{ range $main.Decls.Extras -}}
-	{{- $msg := . -}}
-	{{- if ($msg.IsClientToServer) -}}
-	{{- range $msg.DocLines }}
-	// {{ . }}
-	{{- end }}
-	On_{{ $msg.MethodNameSafe }} func({{ if $msg.HasUnaryParamsTypeName }}params *{{ $msg.UnaryParamsTypeName }}{{ end }}) (any, error)
-	{{ end -}}
-	{{- end -}}
-
-}
-
 type jsonRpcError struct {
 	Code int `json:"code"`
 	Message string `json:"message"`
-}
-
-func (it *Server) handleIncoming(jsonRpcMsg []byte) *jsonRpcError {
-	raw := map[string]any{}
-	if err := json.Unmarshal(jsonRpcMsg, &raw); err != nil {
-		return &jsonRpcError{ Code: -32700, Message: err.Error() }
-	}
-	msg_id, msg_method, msg_err_code :=fmt.Sprintf("%v", raw["id"]), raw["method"], raw["code"]
-
-	if msg_err_code != nil { // received an error Response
-		println(string(jsonRpcMsg)) // goes to stderr
-		return nil
-	}
-
-	switch msg_method, _ := msg_method.(string); msg_method {
-	case "":  // msg is an incoming Response
-		handler := it.waiters[msg_id]
-		delete(it.waiters, msg_id)
-		go handler()
-	default: // msg is an incoming Request or Notification
-		{{- range $main.Decls.Extras -}}
-		{{- $msg := . }}
-		/* {{ $msg.Method }} */
-		{{- end -}}
-	}
-
-	return nil
-}
-
-func (it *Server) sendErrMsg(err any) {
-	if err == nil {
-		return
-	}
-	var json_rpc_err_msg *jsonRpcError
-	if json_rpc_err_msg, _ = err.(*jsonRpcError); json_rpc_err_msg == nil {
-		json_rpc_err_msg = &jsonRpcError{ Code: -32603, Message: fmt.Sprintf("%v", err) }
-	}
-	err_json,_ := json.Marshal(json_rpc_err_msg)
-	_, _ = it.stdout.WriteString("Content-Length: ")
-	_, _ = it.stdout.WriteString(strconv.Itoa(len(err_json)))
-	_, _ = it.stdout.WriteString("\r\n\r\n")
-	_, _ = it.stdout.Write(err_json)
-}
-
-// ServeForever keeps reading and handling LSP JSON-RPC messages incoming over `os.Stdin`
-// until reading from `os.Stdin` fails, then returns that IO read error.
-func (it *Server) ServeForever() error {
-	const buf_cap = 1024 * 1024
-
-	it.stdout = bufio.NewWriterSize(os.Stdout, buf_cap)
-	it.waiters =  map[string]func(){}
-
-	stdin := bufio.NewScanner(os.Stdin)
-	stdin.Buffer(make([]byte, buf_cap), buf_cap)
-	stdin.Split(func(data []byte, ateof bool) (advance int, token []byte, err error) {
-		if i_cl1 := bytes.Index(data, []byte("Content-Length: ")); i_cl1 >= 0 {
-			datafromclen := data[i_cl1+16:]
-			if i_cl2 := bytes.IndexAny(datafromclen, "\r\n"); i_cl2 > 0 {
-				if clen, e := strconv.Atoi(string(datafromclen[:i_cl2])); e != nil {
-					err = e
-				} else if i_js1 := bytes.Index(datafromclen, []byte("{\"")); i_js1 > i_cl2 {
-					if i_js2 := i_js1 + clen; len(datafromclen) >= i_js2 {
-						advance = i_cl1 + 16 + i_js2
-						token = datafromclen[i_js1:i_js2]
-					}
-				}
-			}
-		}
-		return
-	})
-
-	for stdin.Scan() {
-		err := it.handleIncoming(stdin.Bytes())
-		if err != nil {
-			it.sendErrMsg(err)
-		}
-	}
-	return stdin.Err()
 }
