revisit polyglot-lsp (wip)

--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -20,6 +20,7 @@ type Server struct {
 	Lang struct {
 		CompletionTriggerChars []string
 		SignatureTriggerChars []string
+		Commands []string
 	}
 
 	// Initialized is for informational purposes only, to the importer who shall not set or mutate them.
@@ -96,6 +97,40 @@ func (it *Server) handleIncoming(jsonRpcMsg []byte) *jsonRpcError {
 			caps.ImplementationProvider.Boolean = ptr(Boolean(it.On_textDocument_implementation != nil))
 			caps.ReferencesProvider.Boolean = ptr(Boolean(it.On_textDocument_references != nil))
 			caps.DocumentHighlightProvider.Boolean = ptr(Boolean(it.On_textDocument_documentHighlight != nil))
+			caps.DocumentSymbolProvider.Boolean = ptr(Boolean(it.On_textDocument_documentSymbol != nil))
+			caps.CodeActionProvider.Boolean = ptr(Boolean(it.On_textDocument_codeAction != nil))
+			if it.On_textDocument_codeLens != nil {
+				caps.CodeLensProvider = &CodeLensOptions{}
+			}
+			caps.DocumentFormattingProvider.Boolean = ptr(Boolean(it.On_textDocument_formatting != nil))
+			caps.DocumentRangeFormattingProvider.Boolean = ptr(Boolean(it.On_textDocument_rangeFormatting != nil))
+			caps.RenameProvider.RenameOptions = iIf(it.On_textDocument_rename == nil, nil, &RenameOptions{
+				PrepareProvider: ptr(Boolean(it.On_textDocument_prepareRename != nil)),
+			})
+			if it.On_workspace_executeCommand != nil {
+				caps.ExecuteCommandProvider = &ExecuteCommandOptions{Commands: it.Lang.Commands}
+			}
+			caps.SelectionRangeProvider.Boolean = ptr(Boolean(it.On_textDocument_selectionRange != nil))
+			caps.CallHierarchyProvider.Boolean = ptr(Boolean(it.On_textDocument_prepareCallHierarchy != nil && it.On_callHierarchy_incomingCalls != nil && it.On_callHierarchy_outgoingCalls != nil))
+			caps.TypeHierarchyProvider.Boolean = ptr(Boolean(it.On_textDocument_prepareTypeHierarchy != nil && it.On_typeHierarchy_subtypes != nil && it.On_typeHierarchy_supertypes != nil))
+			caps.InlineValueProvider.Boolean = ptr(Boolean(it.On_textDocument_inlineValue != nil))
+			caps.InlayHintProvider.Boolean=ptr(Boolean(it.On_textDocument_inlayHint!=nil))
+			caps.WorkspaceSymbolProvider.Boolean = ptr(Boolean(it.On_workspace_symbol != nil))
+			caps.Workspace = &struct {
+				WorkspaceFolders *WorkspaceFoldersServerCapabilities
+				FileOperations   *FileOperationOptions
+			}{
+				WorkspaceFolders: &WorkspaceFoldersServerCapabilities{
+					Supported: ptr(Boolean(it.On_workspace_didChangeWorkspaceFolders != nil)),
+					ChangeNotifications: struct {
+						String  *String
+						Boolean *Boolean
+					}{
+						Boolean: ptr(Boolean(it.On_workspace_didChangeWorkspaceFolders != nil)),
+					},
+				},
+			}
+
 			return init.Server, nil
 		}, msg_method, msg_id, raw["params"])
 	default: // msg is an incoming Request or Notification
