--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -44,6 +44,9 @@ type Server struct {
 {{- range $main.Decls.Extras -}}
 {{- $msg := . }}
 {{- if $msg.IsServerToClient }}
+{{- range $msg.DocLines }}
+// {{ . }}
+{{- end }}
 func (it *Server) Send_{{ $msg.MethodNameSafe }} (params *{{ $msg.UnaryParamsTypeName }}{{if $msg.IsReq}}, onResp func(*{{- if $msg.IsReq -}}{{- $main.DoType $msg.ResultType -}}{{- end -}}){{end}}) {
 }
 {{- end }}
@@ -74,17 +77,6 @@ func (it *Server) handleIncoming(jsonRpcMsg []byte) *jsonRpcError {
 		serverHandleIncoming(it, it.On_{{ $msg.MethodNameSafe }}, msg_method, msg_id, raw["params"])
 	{{- end }}
 	{{- end }}
-	case "initialized":
-		if it.On_workspace_didChangeWatchedFiles != nil {
-			it.Send_client_registerCapability(&RegistrationParams{
-				Registrations: []Registration{
-					{Method: "workspace/didChangeWatchedFiles", Id: "workspace/didChangeWatchedFiles",
-						RegisterOptions: DidChangeWatchedFilesRegistrationOptions{Watchers: []FileSystemWatcher{
-							{Kind: WatchKindChange | WatchKindCreate | WatchKindDelete,
-								GlobPattern: GlobPattern{Pattern: ptr(String("**/*"))}}}}},
-				},
-			}, func(*Void) {})
-		}
 	case "initialize":
 		serverHandleIncoming(it, func(params *InitializeParams) (any, error) {
 			init := &it.Initialized
@@ -256,7 +248,7 @@ func (it *Server) ServeForever() error {
 	})
 
 	{ // users shouldn't have to set up no-op handlers for these routine teardown lifecycle messages:
-		old_shutdown, old_exit := it.On_shutdown, it.On_exit
+		old_shutdown, old_exit, old_initialized := it.On_shutdown, it.On_exit, it.On_initialized
 		it.On_shutdown = func(params *Void) (any, error) {
 			if old_shutdown != nil {
 				return old_shutdown(params)
@@ -268,6 +260,22 @@ func (it *Server) ServeForever() error {
 				return old_exit(params)
 			}
 			os.Exit(0)
+			return nil, nil
+		}
+		it.On_initialized = func(params *InitializedParams) (any, error) {
+			if it.On_workspace_didChangeWatchedFiles != nil {
+				go it.Send_client_registerCapability(&RegistrationParams{
+					Registrations: []Registration{
+						{Method: "workspace/didChangeWatchedFiles", Id: "workspace/didChangeWatchedFiles",
+							RegisterOptions: DidChangeWatchedFilesRegistrationOptions{Watchers: []FileSystemWatcher{
+								{Kind: WatchKindChange | WatchKindCreate | WatchKindDelete,
+									GlobPattern: GlobPattern{Pattern: ptr(String("**/*"))}}}}},
+					},
+				}, func(*Void) {})
+			}
+			if old_initialized != nil {
+				return old_initialized(params)
+			}
 			return nil, nil
 		}
 	}
