--- a/lang_go/_gen/decls.tmpl
+++ b/lang_go/_gen/decls.tmpl
@@ -1,6 +1,9 @@
 
 import (
+	"bytes"
+	"encoding/json"
 	"net/url"
+	"reflect"
 )
 
 {{ $main := . -}}
@@ -13,6 +16,24 @@ import (
 type DocumentURI = URI
 type URI = String
 type Void = struct{}
+
+func isNone(it any) bool {
+	if it == nil {
+		return true
+	}
+	if has_is_none, _ := it.(interface{ IsNone() bool }); has_is_none != nil {
+		return has_is_none.IsNone()
+	}
+	rv := reflect.ValueOf(it)
+	if maybe, is := it.(reflect.Value); is {
+		if rv = maybe; rv.IsValid() {
+			if has_is_none, _ := maybe.Interface().(interface{ IsNone() bool }); has_is_none != nil {
+				return has_is_none.IsNone()
+			}
+		}
+	}
+	return (!rv.IsValid()) || rv.IsZero() || ((rv.Kind() == reflect.Pointer) && isNone(rv.Elem()))
+}
 
 // URL is a convenience `url.Parse(string(it))` call that returns `nil` on error.
 // If you do need the `error`, just use the original `url.Parse` directly.
